--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             </div>
           </div>
         </div>
-        <div class="timeline-dot timeline-left">
+     <!--   <div class="timeline-dot timeline-left">
           <div class="timeline-content">
             <div class="header display-flex-center">
               <div class="company-info display-flex-center">
@@ -228,7 +228,7 @@
               <i class="fa-solid fa-chart-line"></i>
             </div>
           </div>
-        </div>
+        </div>-->
       </div>
     </div>
   </section>
