--- a/index.html
+++ b/index.html
@@ -716,6 +716,7 @@
 </body>
 <footer>
   <p>Thanks for stopping by! &copy; 2024 Rohith Kumar Katta</p>
+  <p>Created by SattiLabs!</p>
 </footer>
 
 </html>
