--- a/index.html
+++ b/index.html
@@ -704,6 +704,8 @@
 </body>
 <footer>
   <p>Thanks for stopping by! &copy; 2024 Rohith Kumar Katta</p>
+  <p>Crafted by Mr. KaTTa</p>
 </footer>
+
 
 </html>
