--- a/index.html
+++ b/index.html
@@ -704,7 +704,7 @@
 </body>
 <footer>
   <p>Thanks for stopping by! &copy; 2024 Rohith Kumar Katta</p>
-  <p>Crafted by Mr. KaTTa</p>
+  <p>Crafted by SattiLabs!</p>
 </footer>
 
 
