--- a/index.html
+++ b/index.html
@@ -266,15 +266,15 @@
           <div class="skills-list">
             <div class="skill-item">
               <i class="fa-solid fa-certificate"></i>
-              <span class="skill-label">Azure Fundamentals (AZ-900)</span>
+              <span class="skill-label">Generative AI Certified Professional by Oracle & Google</span>
             </div>
             <div class="skill-item">
               <i class="fa-solid fa-certificate"></i>
-              <span class="skill-label">Generative AI</span>
+              <span class="skill-label">SQL by Oracle</span>
             </div>
             <div class="skill-item">
               <i class="fa-solid fa-certificate"></i>
-              <span class="skill-label">SQL Certification</span>
+              <span class="skill-label">AZ900 by Azure</span>
             </div>
           </div>
         </div>
@@ -704,8 +704,8 @@
   </script> -->
 </body>
 <footer>
-  <p>Thanks for stopping by! &copy; 2024 Rohith Kumar Katta</p>
-  <p>Crafted by SattiLabs!</p>
+  <p>Thanks for stopping by! &copy; 2024 Rohith Kumar Katta *   </p>
+  <p>  Crafted by SattiLabs!</p>
 </footer>
 
 
